# icloud-cleanup-daemon

./: .gitignore  .sourcery.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml
docs/plans/: 2026-03-02-watchdog-cpu-optimization.md
launchd/: com.cloud.icloud-cleanup.plist
src/icloud_cleanup/: __init__.py  cleaner.py  config.py  daemon.py  detector.py  icloud_status.py  main.py  nosync.py  watcher.py
src/icloud_cleanup/modules/: __init__.py  base.py  coverage_artifacts.py  ephemeral_caches.py  icloud_conflicts.py
tests/: __init__.py  test_cleaner.py  test_config.py  test_coverage_artifacts_can_match.py  test_daemon.py  test_detector.py  test_ephemeral_caches.py  test_ephemeral_caches_can_match.py  test_icloud_conflicts_can_match.py  test_icloud_status.py  test_module_coverage.py  test_module_discovery.py  test_module_icloud_conflicts.py  test_modules_base.py  test_nosync.py  test_watcher.py
