[project]
name = "icloud-cleanup-daemon"
version = "1.0.0"
description = "Daemon for cleaning up iCloud sync conflict files (e.g., 'file 2.csv', 'file 3.csv')"
authors = [{ name = "cloud" }]
requires-python = ">=3.12,<3.14"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "watchdog>=4.0.0",
    "pyyaml>=6.0",
    "rich==14.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.15",
    "ty>=0.0.17",
]

[project.scripts]
icloud-cleanup = "icloud_cleanup.main:main"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "N",
    "W",
    "UP",
    "B",
    "C4",
    "SIM",
    "RUF"
]

[tool.hatch.build.targets.wheel]
packages = ["src/icloud_cleanup"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
